:boom: another big commit for various changes