@@ -1,5 +1,6 @@
 package com.appirio.mapreduce.skills;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.mapreduce.Mapper;
 
@@ -8,6 +9,7 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.net.URI;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -18,6 +20,7 @@ public class TagHelperImpl implements TagHelper {
     Map<String, Long> tagMap;
 
     public void init(Mapper.Context context) throws IOException, InterruptedException {
+        ObjectMapper mapper = new ObjectMapper();
         if (tagMap == null || tagMap.isEmpty()) {
             tagMap = new HashMap<String, Long>();
             URI[] files = context.getCacheFiles();
@@ -25,14 +28,27 @@ public class TagHelperImpl implements TagHelper {
             BufferedReader bufferedReader = new BufferedReader(new FileReader(tagFile.toString()));
             String line;
             while ((line = bufferedReader.readLine()) != null) {
-                String[] tokens = line.split(",");
-                tagMap.put(tokens[1], new Long(tokens[0]));
+                System.out.println(line);
+                String[] tokens = line.split("\\|");
+                Long tagId = Long.valueOf(tokens[0].trim());
+
+                tagMap.put(tokens[1].toLowerCase().trim(), tagId);
+                // also store all synonyms in the map
+                if (tokens.length == 3 && tokens[2] != null && !tokens[2].equals("\\N")) {
+                    List<String> synonyms = mapper.readValue(tokens[2], mapper.getTypeFactory().constructCollectionType(List.class, String.class));
+                    for (String syn : synonyms) {
+                        tagMap.put(syn.trim().toLowerCase(), tagId);
+                    }
+                }
             }
             bufferedReader.close();
         }
     }
 
-    public long getTagId(String tagName) {
-        return tagMap.get(tagName);
+    public Long getTagId(String tagName) {
+        if (tagName == null){
+            return null;
+        }
+        return tagMap.get(tagName.trim().toLowerCase());
     }
 }
